change TextField is blank to StringUtils isBlank.